--- a/README
+++ b/README
@@ -405,6 +405,10 @@ Author
 
 Martin Blais <blais@furius.ca>
 
+  "Text files are forever"
+
+  --Martin
+
 
 .. _docutils: http://docutils.sourceforge.net
 .. _reStructuredText: http://docutils.sourceforge.net/rst.html
