--- a/README
+++ b/README
@@ -342,6 +342,16 @@ Reporting Bugs
 Send email to the author: Martin Blais <blais@furius.ca>.
 
 
+Links
+=====
+
+Some links to projects with similar goals, or that have some kind of conceptual
+relation:
+
+- `DEVONthink <http://www.devon-technologies.com/products/devonthink/>`_
+
+
+
 Installation and Dependencies
 =============================
 
