--- a/doc/talks/pycon2006.tex
+++ b/doc/talks/pycon2006.tex
@@ -255,3 +255,13 @@ ReStructuredText
 
 .. <show some text with recursive boxes in it> 
 
+
+
+
+
+Desktop Search
+==============
+
+Imagine if you could use your desktop database to feed your blog.
+
+
