--- a/TODO
+++ b/TODO
@@ -10,7 +10,9 @@
 
 - Add comparison to Desktop Search on web page and presentation
 
+- Finish extractors and use it.
 
+- Make the html rendering not render output errors.
 
 
 
