--- a/CHANGES
+++ b/CHANGES
@@ -2,4 +2,17 @@
  CHANGES: nabu
 ===============
 
+Version 0.91
+============
 
+- Completely ripped out SQLObject.  Less dependencies, less moving targets to
+  fix.  The new code depends only on psycopg2 (or another DBAPI-2.0 compliant
+  connection) for the database storage.
+
+- Updated to use the latest (2005-12-19) snapshot of docutils.
+
+
+Version 0.90
+============
+
+- Initial release.
