--- a/TODO
+++ b/TODO
@@ -2,11 +2,13 @@
     TODO: nabu
 ==================
 
-  * Release new version.
+1. Fix the user restriction issue. 
+2. Release new version.
+
 
 - Add comparison to Desktop Search on web page and presentation
 
-- Finish extractors and use it.
+- Finish extractors and use it every day!
 
 - Make the html rendering not render output errors.
 
