--- a/README
+++ b/README
@@ -2,9 +2,12 @@
   nabu: a Publishing System using Text Files
 ==============================================
 
-   "Nabu is the Babylonian god of wisdom and writing, worshipped by
-   Babylonians as the son of Marduk and his consort, Sarpanitum, and as
-   the grandson of Ea."
+   "Nabu is the Babylonian god of wisdom and writing [...]  Nabu is accorded the
+   office of patron of the scribes, taking over from the Sumerian goddess
+   Nisaba. His consort is Tashmetum. His symbols are the clay writing tablet
+   with the writing stylus. [...]  His power over human existence is immense,
+   because Nabu engraves the destiny of each person, as the Gods have decided,
+   on the tablets of sacred record."
 
    ---(From `Wikipedia <http://en.wikipedia.org/wiki/Nabu>`_)
 
