--- a/doc/talks/pycon2006.tex
+++ b/doc/talks/pycon2006.tex
@@ -615,3 +615,10 @@ allows you to avoid having to write input forms
 %===============================================================================
 \end{document}
 
+
+
+
+% Add this: I have dated events in my file for Brazil, PyCon, my TODO file, they
+% all merge into my calendar.
+
+
