--- a/doc/talks/pycon2006.tex
+++ b/doc/talks/pycon2006.tex
@@ -622,3 +622,6 @@ allows you to avoid having to write input forms
 % all merge into my calendar.
 
 
+% Add: MapExtractor that can extract all my links to Google maps and create a
+% single map with them, or a list of locations, they could be accompanied with a
+% trail, and then each trail be displayed separately
