--- a/TODO
+++ b/TODO
@@ -2,6 +2,9 @@
     TODO: nabu
 ==================
 
+- Write an extractor for all my google maps links and create a list of them, so
+  I can find locations easily.  MapExtractor
+
 - Find how to suppress output of errors in HTML conversion, to avoid catching
   this output in the extractors and having this output pollute the contents of
   the extractors.
