--- a/doc/talks/pycon2006.tex
+++ b/doc/talks/pycon2006.tex
@@ -528,6 +528,32 @@ Emacs or vi are always kept running.
 
 
 
+
+
+
+
+
+
+
+
+
+
+% FIXME: build a graph with the docutils structure, the one with
+% reader/transform/writer, same as in the documentation, with the intention to
+% explain that I've had to modify it and to stop the process halfway
+
+
+
+
+
+
+
+
+
+
+
+
+
 %-------------------------------------------------------------------------------
 \begin{frame}[fragile]
   \frametitle{Events Example}
