--- a/doc/talks/pycon2006.tex
+++ b/doc/talks/pycon2006.tex
@@ -1,8 +1,8 @@
 %
 % Introduction slides
 %
-%\documentclass[compress,trans]{beamer}
-\documentclass{beamer}
+\documentclass[compress,trans]{beamer}
+%\documentclass{beamer}
 
 \usepackage{graphicx}
 
@@ -89,7 +89,6 @@
 %   Nabu.
 
 
-% 
 % %-------------------------------------------------------------------------------
 % \begin{frame}
 %   \frametitle{Motivation}
@@ -219,7 +218,7 @@ A script was born (\verb@bmmgr@), typical input:
 \begin{verbatim}
   Raymond Hettinger's photography
   http://www.knowyourboston.com
-  photography, portrait, glamour, boston
+  photography, boston, sexy girls
 \end{verbatim}
 
   \begin{itemize}
@@ -402,6 +401,9 @@ Why?
 \end{verbatim}
 
 \item The editor facilities in most of the browsers is lame
+  \begin{itemize}
+  \item Who has never lost a file being edited in a browser?
+  \end{itemize}
 
 % * Cool idea: link an emacs instance within Firefox.
 % * Does not identify the meanings within the files either.
@@ -595,6 +597,9 @@ sat 2005-12-31
 
 \includegraphics[width=1.0\textwidth]{calendar-shot.pdf}
 
+% Add this: I have dated events in my file for Brazil, PyCon, my TODO file, they
+% all merge into my calendar.
+
 \end{frame}
 
 
@@ -613,6 +618,20 @@ sat 2005-12-31
   \frametitle{Nabu Contents Browser - Upload Info}
 
 \includegraphics[width=1.0\textwidth]{ll-upload.pdf}
+
+\end{frame}
+
+
+
+
+
+%-------------------------------------------------------------------------------
+\begin{frame}[fragile]
+  \frametitle{Problems}
+
+- Creating precise reStructuredText can be fragile from the user's point-of-view
+
+(EXAMPLE)
 
 \end{frame}
 
@@ -642,12 +661,7 @@ allows you to avoid having to write input forms
 \end{document}
 
 
-
-
-% Add this: I have dated events in my file for Brazil, PyCon, my TODO file, they
-% all merge into my calendar.
-
-
 % Add: MapExtractor that can extract all my links to Google maps and create a
 % single map with them, or a list of locations, they could be accompanied with a
 % trail, and then each trail be displayed separately
+
