--- a/doc/talks/pycon2006.tex
+++ b/doc/talks/pycon2006.tex
@@ -191,15 +191,6 @@
 \end{frame}
 
 
-%-------------------------------------------------------------------------------
-\begin{frame}[fragile]
-  \frametitle{What Nabu is not\dots}
-
-Not a Wiki
-
-
-
-\end{frame}
 
 
 %-------------------------------------------------------------------------------
@@ -331,7 +322,7 @@ A script was born (\verb@bmmgr@), typical input:
 
 \vfill\pause
 
-  New task $\rightarrow$ I start a new text file to take notes.
+  New task: I start a new text file to take notes.
 
   This is great, because:
   \begin{itemize}
@@ -431,6 +422,18 @@ Why?
 
 %-------------------------------------------------------------------------------
 \begin{frame}[fragile]
+  \frametitle{What Nabu is not\dots}
+
+Not a Wiki
+
+
+
+\end{frame}
+
+
+
+%-------------------------------------------------------------------------------
+\begin{frame}[fragile]
   \frametitle{Overview}
 
 \includegraphics[width=1.0\textwidth]{../nabu2.pdf}
@@ -454,6 +457,7 @@ Why?
   \frametitle{Target Audience}
  
  Not for your mom!
+\vfill
  
 \pause
  Programmers have developed this great ability: to edit text files.
@@ -472,13 +476,14 @@ Why?
 \begin{frame}[fragile]
   \frametitle{Real Editing}
 
-I live in Emacs
+I live in Emacs.
 
-When I first log in on my machine, I invariably do
-
-1. start a shell
-2. start emacs
-3. start a web browser
+When I first log in on my machine, I invariably do:
+\begin{enumerate}
+\item start a shell
+\item start emacs
+\item start a web browser
+\end{enumerate}
 
 Most of you are probably doing the same.
 
